--- a/content/posts/误解.md
+++ b/content/posts/误解.md
@@ -11,7 +11,7 @@ readingTime: 25 min
 hideComments: false
 color: "green" #color from the theme settings
 ---
-https://web.archive.org/web/20200215010627fw_/http://bobbygoc.sweb.cz/tth/misunderstanding.htm
+[原文](https://web.archive.org/web/20200215010627fw_/http://bobbygoc.sweb.cz/tth/misunderstanding.htm)
 
 ## 一
 
@@ -51,7 +51,7 @@ https://web.archive.org/web/20200215010627fw_/http://bobbygoc.sweb.cz/tth/misund
 
 “马丁，我要你的眼镜做什么？”
 
-“查看！”
+“观看！”
 
 “没有他们我也看得很清楚。你能让我一个人静一静吗？”
 
@@ -77,7 +77,7 @@ https://web.archive.org/web/20200215010627fw_/http://bobbygoc.sweb.cz/tth/misund
 
 “那辆公交车是多少路？太远了，我看不到。”
 
-“从什么时候开始你看不见了？” - 她问。- “你已经戴上了你的规格！”
+“从什么时候开始你看不见了？” - 她问。- “你已经戴上了你的镜片！”
 
 “我需要更强的镜片，”我回答道，这恰好是真的。我最近注意到，如果我倾斜眼镜或将镜片靠近眼睛，我可以看得更清楚。根据经验，我知道这是镜片太弱的迹象，这并不意外，因为我每年去看眼科医生的时间即将到期。
 
@@ -169,7 +169,7 @@ https://web.archive.org/web/20200215010627fw_/http://bobbygoc.sweb.cz/tth/misund
 
 而且每次车停下来，她都会指着路牌继续询问。商店招牌和海报，
 
-“你能读懂吗？”
+“你能看清吗？”
 
 当然，羞得要死的菲奥娜只能默默摇头。我注意到她在哭。
 
@@ -189,7 +189,7 @@ https://web.archive.org/web/20200215010627fw_/http://bobbygoc.sweb.cz/tth/misund
 
 “你疯了吗？”——她问。
 
-我不认为我是。我认为这是一个逻辑问题。但菲奥娜总是有能力给我带来惊喜，这次她做到了。除了母亲在场的时候，她拒绝在任何地方戴眼镜。她固执、天真、坚定。我不禁对她刮目相看。起初我以为她会这样做几天或几周，然后她就会意识到，如果她穿上这些该死的东西，她的生活会变得多么轻松。但菲奥娜只是继续眯着眼睛借用我的笔记并寻求我的帮助。我坐在她旁边，知道她的秘密，所以我可以帮忙。事实上，我认为如果没有我的帮助，她不可能成功。只有少数孩子意识到她在做什么，其中大部分是女孩。其他人并不知道他们实际上正在目睹一场杰作。她的成绩和体育成绩都受到了影响。她的网球运动员比以前差了很多，她被踢出了小联盟队，因为她的击球和接球都恶化了，仅仅是因为她没有看到球。在家里，当她母亲在场或当她看电视而没有其他人在场时，她就戴着眼镜。当然，在这方面我没有算在内。当我们去看电影时，她确实在灯灭后把它们戴上，并在灯再次亮起之前确保它们已关闭。当然，在这方面我没有算在内。当我们去看电影时，她确实在灯灭后把它们戴上，并在灯再次亮起之前确保它们已关闭。当然，在这方面我没有算在内。当我们去看电影时，她确实在灯灭后把它们戴上，并在灯再次亮起之前确保它们已关闭。
+我不认为我是。我认为这是一个逻辑问题。但菲奥娜总是有能力给我带来惊喜，这次她做到了。除了母亲在场的时候，她拒绝在任何地方戴眼镜。她固执、天真、坚定。我不禁对她刮目相看。起初我以为她会这样做几天或几周，然后她就会意识到，如果她穿上这些该死的东西，她的生活会变得多么轻松。但菲奥娜只是继续眯着眼睛借用我的笔记并寻求我的帮助。我坐在她旁边，知道她的秘密，所以我可以帮忙。事实上，我认为如果没有我的帮助，她不可能成功。只有少数孩子意识到她在做什么，其中大部分是女孩。其他人并不知道他们实际上正在目睹一场杰作。她的成绩和体育成绩都受到了影响。她的网球运动员比以前差了很多，她被踢出了小联盟队，因为她的击球和接球都恶化了，仅仅是因为她没有看到球。在家里，当她母亲在场或当她看电视而没有其他人在场时，她就戴着眼镜。当然，在这方面我没有算在内。当我们去看电影时，她确实在灯灭后把它们戴上，并在灯再次亮起之前确保它们已被摘下。
 
 这种情况持续了一月又一月，我越来越惊讶她竟然能逃脱惩罚。一件事有帮助。由于医生实际上并没有说她必须戴眼镜，所以她的母亲对她并不是很严厉。她很愿意接受菲奥娜周日不戴眼镜去教堂或和孩子们一起去的事实。她无法接受的是她在学校没有穿它们，并因为她的虚荣心而让她的体育生活失败。
 
@@ -211,7 +211,7 @@ https://web.archive.org/web/20200215010627fw_/http://bobbygoc.sweb.cz/tth/misund
 
 “这说明你是个白痴！”
 
-就是这样！主题完毕！
+就是这样！话题结束！
 
 尽管如此，我知道我是对的，当我们去看电影时我更加确定她想再次坐在前面。我提到了她的眼镜，并建议她和妈妈谈谈，但是 - 我能说什么？我当然无法重现她斥责我时所用的语言。
 
@@ -239,7 +239,7 @@ https://web.archive.org/web/20200215010627fw_/http://bobbygoc.sweb.cz/tth/misund
 
 “嘿，菲奥娜戴着眼镜！”
 
-“他们穿在你身上看起来很酷！”
+“它们戴在你身上看起来很酷！”
 
 “你用它们看得更清楚吗？我注意到你最近眯眼的次数很多。”
 
@@ -249,7 +249,7 @@ https://web.archive.org/web/20200215010627fw_/http://bobbygoc.sweb.cz/tth/misund
 
 不出所料，奥格雷迪夫人的回答坚决是否定的。当他们回到家时，她向女儿宣读了防暴法案。她告诉她，她会打电话给学校的布劳恩豪斯女士，告诉她菲奥娜戴眼镜的情况，并请她告诉母亲，如果她的女儿不戴眼镜的话。她请奥格雷迪夫人将此事通知其他老师。菲奥娜认为这是空洞的威胁，决定无视母亲的威胁。周一早上，当布劳恩豪斯女士走进教室，环顾四周，看到菲奥娜没有戴眼镜时，她非常不愉快地大吃一惊，然后说：
 
-“Fiona，你妈妈打电话给我，告诉我你要戴眼镜上课。请你戴上。”
+“菲奥娜，你妈妈打电话给我，告诉我你要戴眼镜上课。请你戴上。”
 
 菲奥娜的脸涨得通红，但她没有办法，只能服从。此后，她的计划发生了改变。她仍然拒绝连续佩戴眼镜，但她戴眼镜的次数比以前多了很多。当她妈妈在家里时，她在家里穿着它们，在学校上课，但在休息时脱下它们，周日去教堂时，通常很可能会被与她母亲友好的成年人看到。结果之一就是她习惯了佩戴它们并且视力良好。由于现在每个人都知道她的眼镜，因此只要视力重要，她就愿意自愿戴上它们。当她穿上自己的规格后，她的网球和垒球成绩再次迅速提高。她在观看体育赛事时使用它们。她甚至在徒步旅行看风景时偶尔也会戴上它们。她戴眼镜的次数越多，就越容易忘记摘下眼镜。有时她整个休息时间都没有摘下它们。当然，我把她当作一只鹰来看待，并且喜欢看到她戴眼镜的样子。我永远不会提醒她把它们脱下来。
 
@@ -265,7 +265,7 @@ https://web.archive.org/web/20200215010627fw_/http://bobbygoc.sweb.cz/tth/misund
 
 “是谁？” -她愤怒地喊道。
 
-“这就是我。”
+“是我。”
 
 “你想要什么。”
 
@@ -279,7 +279,7 @@ https://web.archive.org/web/20200215010627fw_/http://bobbygoc.sweb.cz/tth/misund
 
 “但是菲奥娜……”
 
-“迷路！”
+“滚开！”
 
 最后一句话是尖叫的。晚上晚些时候，她与我交谈，并将这次事件描述为一场灾难。她拒绝告诉我她的新处方是什么。
 
@@ -305,15 +305,15 @@ https://web.archive.org/web/20200215010627fw_/http://bobbygoc.sweb.cz/tth/misund
 
 “你是什么意思？” - 我说过，我一生中从未如此惊讶过。很明显，她的意思不仅仅是睡在同一个房间。
 
-“我认为他们是恋人。”
+“我认为她们是恋人。”
 
 “太荒谬了！我简直不敢相信！你为什么这么想？”
 
-“呃……昨晚我要去洗手间……已经过了半夜……当我走进走廊时，我听到楼下有奇怪的声音。我下了楼，光着脚，发出一点声音……然后到了客厅。”电视还开着，妈妈和你妈妈坐在面向电视机的沙发上……他们……你知道……”
+“呃……昨晚我要去洗手间……已经过了半夜……当我走进走廊时，我听到楼下有奇怪的声音。我下了楼，光着脚，发出一点声音……然后到了客厅。”电视还开着，妈妈和你妈妈坐在面向电视机的沙发上……她们……你知道……”
 
 “我不知道！它们是什么？”
 
-“掐脖子！”
+“拥吻！”
 
 “我不相信！”
 
@@ -335,11 +335,11 @@ https://web.archive.org/web/20200215010627fw_/http://bobbygoc.sweb.cz/tth/misund
 
 岁月流逝。除了我对菲奥娜的感情，一切都变了。她一如既往地狂野。我记得当我在浴室的抽屉里发现避孕套时。当然，我不应该打开她的抽屉，我想假装这是一个错误。但事实并非如此！这是好奇心。还有一次，放学后，她让我在回家之前等她，因为她需要见学校护士。（我拥有一辆便宜的二手车，开车送我们上下学。当然，以菲奥娜的视力，她永远也拿不到驾照。）
 
-“你想从护士那儿得到什么？” - 我问。
+“你想从护士那儿要到什么？” - 我问。
 
-“药丸。” - 她回答。
+“药片。” - 她回答。
 
-“丹药？什么丹药？”
+“药片？什么药片？”
 
 她用鄙视的眼神看着我，好像我是个白痴。
 
@@ -351,7 +351,7 @@ https://web.archive.org/web/20200215010627fw_/http://bobbygoc.sweb.cz/tth/misund
 
 那是十月初，小阳春一个美丽的周末，一群人，包括菲奥娜和我。我们爬到了很高的地方以获得最好的景色，但菲奥娜想要更高的地方。爬上了一块岩石露头。
 
-“那边小心点！” - 有人喊道。
+“对面小心点！” - 有人喊道。
 
 就在同一时刻，她的一只脚踩到了一块不稳定的石头上，石头移动了，菲奥娜摔倒了。她摔倒了，滚了好远。我们都跑向她，当我们到达她身边时，我们问她怎么样。她笑着坐起来，移动胳膊和腿，向我们表明没有任何东西损坏。然后，她突然脸色苍白。
 
@@ -363,7 +363,7 @@ https://web.archive.org/web/20200215010627fw_/http://bobbygoc.sweb.cz/tth/misund
 
 幸运的是我知道该怎么做。她不得不躺下，待在外面。我们没有随身携带手机——这发生在手机出现之前——所以我们中的一些人以最快的速度跑下去并提供帮助。我决定留下来和我们在一起。不幸的是，过了好几个小时救援才到达。跑下来的孩子们——而且路途很长——必须先找到奥格雷迪夫人，她必须找到眼科医生，而他必须安排一架直升机来接她。她一到医院，他们就进行了手术。接下来的日子对我们所有人来说都是极其痛苦的。视网膜的第一次重新附着没有成功。第二次操作失败。第三次成功了。他们放置巩膜带扣以将视网膜固定到位。这些药物的副作用之一是，由于它们对眼球施加压力，它们会大大增加近视程度。然而，无论如何，这还不是最大的问题。麻烦的是，由于第一次手术的延迟和第一次手术的失败，她的视网膜受到了严重损伤。她现在需要的处方是-19.50 和-21.00。悲剧的是，即使有如此强大的镜片，她的视力仍然下降到20/200。菲奥娜在法律上是盲人！
 
-我永远记得她第一次带着肌盘镜片回到学校的情景。尽管医生建议她使用拐杖，但她拒绝使用拐杖，但很快所有孩子都清楚她的视力变得多么有限。即使在前排的课桌上，她也看不到黑板。最终，她获得了各种视觉辅助工具，例如可以看到棋盘或电视的伸缩眼镜，以及可以放大电脑屏幕上图像的计算机程序。看电影对她来说毫无意义，她的视力也不够好，无法享受体育赛事。然而，她仍然美丽性感，她的肌盘在床上就像她以前的眼镜一样容易脱落。她继续无视我。
+我永远记得她第一次带着开圈镜片回到学校的情景。尽管医生建议她使用拐杖，但她拒绝使用拐杖，但很快所有孩子都清楚她的视力变得多么有限。即使在前排的课桌上，她也看不到黑板。最终，她获得了各种视觉辅助工具，例如可以看到棋盘或电视的伸缩眼镜，以及可以放大电脑屏幕上图像的计算机程序。看电影对她来说毫无意义，她的视力也不够好，无法享受体育赛事。然而，她仍然美丽性感，她开圈眼镜在床上就像她以前的眼镜一样容易滑落。她继续无视我。
 
 ## 四
 
@@ -371,7 +371,7 @@ https://web.archive.org/web/20200215010627fw_/http://bobbygoc.sweb.cz/tth/misund
 
 我和她彻底失去了联系。我知道她就读于当地州立大学，尽管她有视力障碍，但仍以优异的成绩毕业。她成为一名视障人士老师，这是我没想到她会选择的职业。但是，她总是有能力给我带来惊喜。我不知道她住在哪里。
 
-十一月的一个寒冷的周日，我步行去第 92 街的 YMCA 参加一场下午的音乐会——我一直很喜欢古典音乐。我独自一人，这对周末的我来说并不罕见。突然我注意到一个盲人妇女手里拿着一根长长的白色手杖朝同一个方向走来。自从我和菲奥娜的经历之后，我就对盲人女性产生了特殊的情有独钟。当她到达下一个十字路口时，我加速追上她。我走到她身边说道：
+十一月的一个寒冷的周日，我步行去第 92 街的青年教会参加一场下午的音乐会——我一直很喜欢古典音乐。我独自一人，这对周末的我来说并不罕见。突然我注意到一个盲人妇女手里拿着一根长长的白色手杖朝同一个方向走来。自从我和菲奥娜的经历之后，我就对盲人女性产生了特殊的情有独钟。当她到达下一个十字路口时，我加速追上她。我走到她身边说道：
 
 “让我帮你过去吧。”
 
@@ -405,7 +405,7 @@ https://web.archive.org/web/20200215010627fw_/http://bobbygoc.sweb.cz/tth/misund
 
 “菲奥娜，”我说道，声音里充满了真正的激情。——“我相信你知道，从我们九岁第一次见面起，我就爱上了你。因为你的记忆，我从未结婚，从未与一个女人深入交往。我从来没有勇气开口说话。”向你诉说我的爱，因为我知道你无法忍受我并且看不起我。但现在我不再等待了！我要问！我现在不期待答案。但是你会考虑一下吗嫁给我？”
 
-我看得出来，她深受感动。事实上，我可以看到她肌盘后面的泪水。
+我看得出来，她深受感动。事实上，我可以看到她开圈眼镜后面的泪水。
 
 “你爱过我？” - 她问。——“我以为你讨厌我、鄙视我！是我一直爱着你，梦想着你改变主意，却从来不敢和你说起！我还以为你嫌我戴着厚厚的镜片丑呢！”
 
