--- a/content/posts/误解.md
+++ b/content/posts/误解.md
@@ -3,7 +3,7 @@ title: "误解"
 date: "2001-12-17T20:57:07+02:00"
 author: "Tom the Hungarian"
 cover: ""
-tags: ["学校", "同性恋","Tom"]
+tags: ["校园", "同性恋","Tom"]
 keywords: ["", ""]
 description: "青梅竹马和对眼镜强烈羞耻与隐藏的故事"
 showFullContent: false
@@ -11,7 +11,9 @@ readingTime: 25 min
 hideComments: false
 color: "green" #color from the theme settings
 ---
-[原文](https://web.archive.org/web/20200215010627fw_/http://bobbygoc.sweb.cz/tth/misunderstanding.htm)
+[原文地址](https://web.archive.org/web/20200215010627fw_/http://bobbygoc.sweb.cz/tth/misunderstanding.htm)
+
+目录：[一](#一) [二](#二) [三](#三) [四](#四)
 
 ## 一
 
