更新词汇表

--- a/content/posts/《亲爱的日记》.md
+++ b/content/posts/《亲爱的日记》.md
@@ -4,7 +4,7 @@ date = "2023-07-09T00:15:20+02:00"
 author = "val"
 authorTwitter = "https://vision-and-spex.com/memberlist.php?mode=viewprofile&u=2" #do not include @
 cover = ""
-tags = ["校园", "val"]
+tags = ["校园", "val", "精华"]
 keywords = ["", ""]
 description = "长达三年的女孩视力日记"
 showFullContent = false
