--- a/content/posts/《误解》.md
+++ b/content/posts/《误解》.md
@@ -3,7 +3,7 @@ title: "《误解》"
 date: "2023-07-09T20:57:07+02:00"
 author: "Tom the Hungarian"
 cover: ""
-tags: ["校园", "同性恋","Tom"]
+tags: ["校园", "同性恋","Tom", "精华"]
 keywords: ["", ""]
 description: "青梅竹马和对眼镜强烈羞耻与隐藏的故事"
 showFullContent: false
