--- a/content/posts/词汇列表.md
+++ b/content/posts/词汇列表.md
@@ -13,11 +13,66 @@ color = "" #color from the theme settings
 
 +++
 
+## 基本
 
+| 英文                                   | 中文     |
+| :------------------------------------- | :------- |
+| Glasses/Spectacle/Specs/Spex           | 眼镜     |
+| Contacts                               | 隐形眼镜 |
+| Lens                                   | 镜片     |
+| Myopia/Nearsightedness                 | 近视     |
+| Hyperopia/Hypermetropia/Farsightedness | 远视     |
+| Astigmatism                            | 散光     |
+| Presbyopia                             | 老花眼   |
+| Strabismus                             | 斜视     |
 
-| 英文                      | 中文               |
-| :------------------------ | :----------------- |
-| myodisc                   | 开圈眼镜           |
-| prescription              | 度数/处方          |
-| GOC (glasses on contacts) | 在隐形眼镜上戴眼镜 |
+## 处方
 
+| 英文                       | 中文                                                 |
+| -------------------------- | ---------------------------------------------------- |
+| prescription               | 度数/处方                                            |
+| SPH (Sphere)               | 球镜                                                 |
+| CYL (Cylinder)             | 柱镜                                                 |
+| Spherical Equivalent       | 等效球镜，通常为球镜+柱镜/2                          |
+| ADD                        | 下加光：为阅读而设置的额外的正光度                   |
+| distance                   | 远用（处方/眼镜）                                    |
+| reading                    | 近用（处方/眼镜）                                    |
+| Prism                      | 棱镜：为斜视或复视患者设置的眼镜参数                 |
+| BVD (back vertex distance) | 镜眼间距：眼镜或隐形眼镜的后表面与角膜前部之间的距离 |
+
+## 眼镜
+
+| 英文                       | 中文                                                         |
+| -------------------------- | ------------------------------------------------------------ |
+| Myodisc                    | 开圈眼镜：度数过高，或度数较高而镜片折射率低时使用的眼镜     |
+| Plano Base Curve           | 平面基曲线：镜片前表面的弧度为平坦的，适用于高度近视减少镜片厚度 |
+| CR-39 (Columbia Resin #39) | 一种塑料，最便宜的镜片材质，折射率为1.5                      |
+| (high) Index               | （高）折射率                                                 |
+| Bifocals                   | 双焦点眼镜：镜片上下部有两个光度，为患有调节力不足或为控制青少年近视而制作 |
+| Progressives               | 渐进式多焦点镜片：镜片的光度平滑地变化                       |
+| RGP/Hard Contact Lens      | 硬性隐形眼镜：透氧量高，视觉效果好，适合高度数患者佩戴       |
+| Orthokeratology            | 角膜塑形镜/OK镜：控制儿童近视的硬性隐形眼镜                  |
+
+## 效果
+
+| 英文        | 中文                                         |
+| ----------- | -------------------------------------------- |
+| cut-in      | 戴近视眼镜后，脸部在镜片内因折射而收缩的效果 |
+| power rings | 圈圈                                         |
+
+## 其他
+
+| 英文                      | 中文                                           |
+| ------------------------- | ---------------------------------------------- |
+| GOC (glasses on contacts) | 在隐形眼镜上戴眼镜                             |
+| Occlusion Therapy         | 遮盖疗法：用于治疗儿童弱视，在眼镜或眼睛上遮盖 |
+
+## 病症
+
+| 英文                   | 中文   |
+| ---------------------- | ------ |
+| Esotropia              | 内斜视 |
+| Exotropia              | 外斜视 |
+| Diplopia/double vision | 复视   |
+
+## 
