--- a/content/posts/词汇列表.md
+++ b/content/posts/词汇列表.md
@@ -52,6 +52,8 @@ color = "" #color from the theme settings
 | Progressives               | 渐进式多焦点镜片：镜片的光度平滑地变化                       |
 | RGP/Hard Contact Lens      | 硬性隐形眼镜：透氧量高，视觉效果好，适合高度数患者佩戴       |
 | Orthokeratology            | 角膜塑形镜/OK镜：控制儿童近视的硬性隐形眼镜                  |
+| Scleral lens               | 巩膜镜：跨在巩膜上的隐形眼镜                                 |
+| Temples                    | 镜腿                                                         |
 
 ## 效果
 
@@ -60,19 +62,23 @@ color = "" #color from the theme settings
 | cut-in      | 戴近视眼镜后，脸部在镜片内因折射而收缩的效果 |
 | power rings | 圈圈                                         |
 
-## 其他
+## 恋物癖
 
-| 英文                      | 中文                                           |
-| ------------------------- | ---------------------------------------------- |
-| GOC (glasses on contacts) | 在隐形眼镜上戴眼镜                             |
-| Occlusion Therapy         | 遮盖疗法：用于治疗儿童弱视，在眼镜或眼睛上遮盖 |
+| 英文                      | 中文               |
+| ------------------------- | ------------------ |
+| GOC (glasses on contacts) | 在隐形眼镜上戴眼镜 |
 
-## 病症
+## 更多病症及治疗
 
-| 英文                   | 中文   |
-| ---------------------- | ------ |
-| Esotropia              | 内斜视 |
-| Exotropia              | 外斜视 |
-| Diplopia/double vision | 复视   |
+| 英文                   | 中文                                           |
+| ---------------------- | ---------------------------------------------- |
+| Esotropia              | 内斜视                                         |
+| Exotropia              | 外斜视                                         |
+| Occlusion Therapy      | 遮盖疗法：用于治疗儿童弱视，在眼镜或眼睛上遮盖 |
+| Diplopia/double vision | 复视                                           |
+| Cataract               | 白内障                                         |
+| IOL (Intraocular lens) | 人工晶体，取代自然晶体，用于白内障手术         |
+| Crystalline Lens       | 晶状体                                         |
+| LASIK                  | 激光手术                                       |
+| ICL                    | 人工晶体（保留自然晶体）                       |
 
-## 
